HTTPS Previews: Run triggering logic after previews server redirect

We should be able to retrigger after the previews server sends a 307 to
another page (i.e.: doesn't bypass).

Bug: 911893
Change-Id: Ib844f65749b5dc71810d4a52baf018b01852f560
Reviewed-on: https://chromium-review.googlesource.com/c/1362483
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Commit-Queue: Robert Ogden <robertogden@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#614001}(cherry picked from commit aa0a14c6312930131cfc0f6204df2d29564a6cea [formerly ffce7b3ef2f7dc52a2b231d5ed044bc41e540384])
Reviewed-on: https://chromium-review.googlesource.com/c/1366265
Reviewed-by: Robert Ogden <robertogden@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#121}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 179e225bb695f4d4c1df2fb59fdde9e5ec41d142